调整项目配置文件及相关脚本

--- a/Distribution/src/resources/project-conf.properties
+++ b/Distribution/src/resources/project-conf.properties
@@ -28,39 +28,46 @@
 #                              集群配置                                #
 #---------------------------------------------------------------------#
 
-#ZOOKEEPER的安装节点的IP端口号:e.x:172.18.18.144;172.18.18.143;172.18.18.147
+#ZOOKEEPER的安装节点:  e.x: 172.18.18.144;172.18.18.143;172.18.18.147
 zookeeper_installnode=
 
-#KAFKA的安装节点所在IP端口号:e.x:172.18.18.144;172.18.18.143;172.18.18.147
-kafka_installnode=
+#KAFKA的安装节点:   e.x: 172.18.18.144;172.18.18.143;172.18.18.147
+kafka_install_node=
 
-#FTP的代理节点所在IP:e.x:172.18.18.144
-ftp_proxynode=
+#FTP的代理节点:  e.x: 172.18.18.144
+ftp_proxy_ip=
+ftp_proxy_hostname=
+ftp_proxy_port=
 
-#FTP的服务节点所在IP及主机名，用于配置ftpAddress.properties；
-#【注意】这行主机名和IP之间用冒号间隔:
-# e.x:s115:172.18.18.143;s117:172.18.18.147
-ftp_serviceip=
+#FTP的服务节点（HostName及IP）
+#【注意】这行主机名和IP之间用冒号间隔:   e.x: s115:172.18.18.143;s117:172.18.18.147
+ftp_service_ip=
+
+#FTP集群节点HostName及IP映射:  e.x: s120:172.18.18.163;s103:172.18.18.103;s105:172.18.18.105
+ftp_hostname_mapping=s120:172.18.18.163;s103:172.18.18.103;s105:172.18.18.105
 
 #FTP服务节点的主机名，用于配置service/conf/ftp-hostnames.properties；common/conf/ftp-hostnames.properties;分发ftp文件夹到各个节点
 #e.x:s115;s117
-ftp_servicenode=
+ftp_service_node=
 
-#ROCKETMQ的Nameserver节点所在IP:e.x:172.18.18.147
+#ROCKETMQ的Nameserver节点:    e.x: 172.18.18.147
 rocketmq_nameserver=
 
 #DUBBO的服务节点所在IP:e.x:172.18.18.144;172.18.18.143
-dubbo_servicenode=
+dubbo_servicenode=删除
 
-#spring cloud服务节点所在IP
-spring_cloud_servicenode=
+#spring cloud服务节点:
+spring_cloud_service_node=
 
-#ES的服务节点所在IP:e.x:172.18.18.144
+#spring cloud eureka client: e.x: http://172.18.18.144:8761/eureka/
+eureka_client_serviceUrl_defaultZone=
+
+#ES的服务节点所在IP:   e.x: 172.18.18.144
 #only need one of the es nodes of es cluster
-es_servicenode=
+es_service_node=
 
 #JDBC的主机名:e.x:s115;s116;s117
-jdbc_servicenode=
+jdbc_service_node=
 
 #需要分发common目录的节点主机名：e.x:s115;s116;s117
 Cluster_HostName=
@@ -68,7 +75,7 @@ Cluster_HostName=
 #---------------------------------------------------------------------#
 #                              其他配置                                #
 #---------------------------------------------------------------------#
-#需要搭建的服务：e.x:device;face;starepo
+#需要搭建的服务：e.x: device;face;starepo
 spring_cloud_service_classes=
 
 #创建kafka topic时的副本数
@@ -78,7 +85,7 @@ kafka_partitions=6
 ## 大数据相关的组件安装根目录
 Install_HomeDir=/opt/hzgc/bigdata
 ## Ftp的数据存放目录:
-FTP_DataDir=/opt/ftpdata
+ftp_data_dir=/opt/ftpdata
 
 ##ES索引模糊查询最小、最大字符数
 Min_Gram=2
@@ -99,3 +106,26 @@ Ftp_switch=false
 
 ##常驻人口管理告警信息MYSQL数据库地址
 job_clustering_mysql_url=jdbc:mysql://172.18.18.42:3306/isap?user=root&password=root
+
+##### 连接池相关配置 #####
+phoenix_enable=
+phoenix_url=
+phoenix_type=
+phoenix_driver-class-nam=
+phoenix_default-auto-commit=
+
+##### ES集群相关配置 #####
+es_cluster_name=
+#only need one of the es nodes of es cluster
+es_hosts=172.18.18.103
+es_cluster_port=9300
+
+##### Spark JDBC相关配置 #####
+hive_jdbc_driver=
+hive_jdbc_url=
+
+##### Ftp Subscription 相关配置 #####
+zk_session_timeout=6000
+zk_address=172.18.18.163:2181
+zk_path_subscribe="/ftp_subscribe"
+zk_watcher=false
