--- a/Service/DynRepo/pom.xml
+++ b/Service/DynRepo/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>com.hzgc.service</groupId>
     <artifactId>dynrepo</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -66,7 +67,7 @@
     </dependencies>
 
     <build>
-        <!--<resources>
+        <resources>
             <resource>
                 <targetPath>${project.build.directory}/classes/META-INF/spring</targetPath>
                 <directory>src/main/resources</directory>
@@ -75,22 +76,21 @@
                     <exclude>**</exclude>
                 </excludes>
             </resource>
-        </resources>-->
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <classifier>spring</classifier>
                     <mainClass>com.hzgc.service.dynrepo.DynRepoApplication</mainClass>
                 </configuration>
-                <!--<executions>
+                <executions>
                     <execution>
                         <goals>
-                            <goal>repackage</goal> 可以把依赖的包都打包到生成的Jar包中
+                            <goal>repackage</goal>
                         </goals>
                     </execution>
-                </executions>-->
+                </executions>
             </plugin>
         </plugins>
     </build>
