--- a/Service/Visual/pom.xml
+++ b/Service/Visual/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>com.hzgc.service</groupId>
     <artifactId>visual</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -116,16 +117,15 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <classifier>spring</classifier>
                     <mainClass>com.hzgc.service.visual.VisualApplication</mainClass>
                 </configuration>
-                <!--<executions>
+                <executions>
                     <execution>
                         <goals>
-                            <goal>repackage</goal> 可以把依赖的包都打包到生成的Jar包中
+                            <goal>repackage</goal>
                         </goals>
                     </execution>
-                </executions>-->
+                </executions>
             </plugin>
         </plugins>
     </build>
