--- a/Cluster/Spark/src/main/resources/sparkJob.properties
+++ b/Cluster/Spark/src/main/resources/sparkJob.properties
@@ -29,6 +29,11 @@ es.hosts=172.18.18.103
 es.cluster.port=9300
 ################################
 
+########## phoenix option ##########
+# phoenix jdbc url
+phoenix.jdbc.url=
+####################################
+
 ########## recognizeAlarmJob option ##########
 # group id
 kafka.FaceRecognizeAlarmJob.group.id=FaceRecognizeAlarmJobGroup
