--- a/Service/StaRepo/src/main/resources/starepoApplication.properties
+++ b/Service/StaRepo/src/main/resources/starepoApplication.properties
@@ -4,20 +4,31 @@ server.port=7776
 spring.application.name=staRepo
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+################################
 
 ##### 连接池相关配置 #####
 phoenix.enable=true
 phoenix.url=jdbc:phoenix:172.18.18.100:2181
 phoenix.type=com.alibaba.druid.pool.DruidDataSource
 phoenix.driver-class-name=org.apache.phoenix.jdbc.PhoenixDriver
-##phoenix的用户名默认为空
+# phoenix的用户名默认为空
 phoenix.username=
-##phoenix的密码默认为空
+# phoenix的密码默认为空
 phoenix.password=
 phoenix.default-auto-commit=true
+########################
 
-##### #####
-table.name=objectinfo
-table.colfams=person
-table.maxversion=1
+##### 静态库相关配置 #####
+static.repo.table.name=objectinfo
+static.repo.table.colfams=person
+static.repo.table.maxversion=1
 #table.timetolive=15768000
+########################
+
+##### kafka相关配置 #####
+kafka.bootstrap.servers=
+kafka.request.required.acks=-1
+kafka.retries=0
+kafka.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+value.serializer=org.apache.kafka.common.serialization.StringSerializer
+########################
