--- a/Service/Face/src/main/resources/faceApplication.properties
+++ b/Service/Face/src/main/resources/faceApplication.properties
@@ -1,6 +1,9 @@
 ##### Spring Cloud 相关配置 #####
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://172.18.18.201:9000/eureka/
 server.port=7775
 spring.application.name=face
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+#eureka.client.register-with-eureka=false
+#eureka.client.fetch-registry=false
+eureka.instance.status-page-url=http://172.18.18.104:${server.port}/swagger-ui.html
+eureka.instance.preferIpAddress=true
+eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
