--- a/Service/Address/pom.xml
+++ b/Service/Address/pom.xml
@@ -36,7 +36,7 @@
     </dependencies>
 
     <build>
-        <resources>
+        <!--<resources>
             <resource>
                 <targetPath>${project.build.directory}/classes/META-INF/spring</targetPath>
                 <directory>src/main/resources</directory>
@@ -45,7 +45,7 @@
                     <exclude>**</exclude>
                 </excludes>
             </resource>
-        </resources>
+        </resources>-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
