--- a/Service/DynRepo/src/main/resources/application-pro.properties
+++ b/Service/DynRepo/src/main/resources/application-pro.properties
@@ -1,20 +1,19 @@
 ##### Spring Cloud 相关配置 #####
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://${eureka.ip}:${eureka.port}/eureka/
 server.port=7774
 spring.application.name=dynRepo
 eureka.instance.status-page-url=http://${spring.cloud.client.ipAddress}:${server.port}/swagger-ui.html
 eureka.instance.preferIpAddress=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 spring.cloud.config.enabled=false
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+
 
 ##### ES集群相关配置 #####
 es.cluster.name=hbase2es-cluster
 #only need one of the es nodes of es cluster
-es.hosts=172.18.18.103
+es.hosts=${es.host}
 es.cluster.port=9300
 
 ##### Spark JDBC相关配置 #####
-hive.jdbc.driver=
-hive.jdbc.url=
+hive.jdbc.driver=org.apache.hive.jdbc.HiveDriver
+hive.jdbc.url=jdbc:hive2://${zookeeper.host}/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=thriftserver
