--- a/Service/Face/src/main/resources/application-pro.properties
+++ b/Service/Face/src/main/resources/application-pro.properties
@@ -1,5 +1,5 @@
 ##### Spring Cloud 生产环境相关配置 #####
-eureka.client.serviceUrl.defaultZone=http://${eureka.ip}:9000/eureka/
+eureka.client.serviceUrl.defaultZone=http://${eureka.ip}:${eureka.port}/eureka/
 server.port=7776
 spring.application.name=face
 eureka.instance.status-page-url=http://${server.ip}:${server.port}/swagger-ui.html
