--- a/Service/Face/src/main/resources/application-dev.properties
+++ b/Service/Face/src/main/resources/application-dev.properties
@@ -1,10 +1,8 @@
-##### Spring Cloud 开发环境相关配置 #####
+##### Spring Cloud 生产环境相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://172.18.18.201:9000/eureka/
 server.port=7776
 spring.application.name=face
-eureka.instance.status-page-url=http://192.168.1.57:${server.port}/swagger-ui.html
+eureka.instance.status-page-url=http://localhost:${server.port}/swagger-ui.html
 eureka.instance.preferIpAddress=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 spring.cloud.config.enabled=false
-#eureka.client.register-with-eureka=false
-#eureka.client.fetch-registry=false
