--- a/Common/Common-es/pom.xml
+++ b/Common/Common-es/pom.xml
@@ -13,14 +13,24 @@
     <artifactId>common-es</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.hzgc</groupId>
-            <artifactId>elasticsearch</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
             <groupId>com.hzgc.common</groupId>
             <artifactId>common-util</artifactId>
             <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>5.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>transport</artifactId>
+            <version>5.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.8.2</version>
         </dependency>
     </dependencies>
 
