--- a/Service/Address/src/main/resources/application-pro.properties
+++ b/Service/Address/src/main/resources/application-pro.properties
@@ -1,5 +1,5 @@
 ##### Spring Cloud œ‡πÿ≈‰÷√ #####
-eureka.client.serviceUrl.defaultZone=http://${eureka.ip}:9000/eureka/
+eureka.client.serviceUrl.defaultZone=http://${eureka.ip}:${eureka.port}/eureka/
 server.port=7770
 spring.application.name=ftp
 eureka.instance.status-page-url=http://${server.ip}:${server.port}/swagger-ui.html
