--- a/Service/DynRepo/pom.xml
+++ b/Service/DynRepo/pom.xml
@@ -49,6 +49,17 @@
         <dependency>
             <groupId>com.hzgc.common</groupId>
             <artifactId>common-es</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.elasticsearch</groupId>
+                    <artifactId>elasticsearch</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>5.5.0</version>
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
