--- a/Service/DynRepo/src/main/resources/application-dev.properties
+++ b/Service/DynRepo/src/main/resources/application-dev.properties
@@ -6,15 +6,12 @@ eureka.instance.status-page-url=http://${spring.cloud.client.ipAddress}:${server
 eureka.instance.preferIpAddress=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 spring.cloud.config.enabled=false
-#eureka.client.register-with-eureka=false
-#eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 
-##### ES集群相关配置 #####
 es.cluster.name=hbase2es-cluster
-#only need one of the es nodes of es cluster
 es.hosts=172.18.18.100
 es.cluster.port=9300
-
-##### Spark JDBC相关配置 #####
 hive.jdbc.driver=
 hive.jdbc.url=
+call.external.service=false
