--- a/Service/DynRepo/src/main/resources/application-pro.properties
+++ b/Service/DynRepo/src/main/resources/application-pro.properties
@@ -1,4 +1,3 @@
-##### Spring Cloud 相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://${eureka.ip}:${eureka.port}/eureka/
 server.port=7774
 spring.application.name=dynRepo
@@ -7,13 +6,9 @@ eureka.instance.preferIpAddress=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 spring.cloud.config.enabled=false
 
-
-##### ES集群相关配置 #####
 es.cluster.name=hbase2es-cluster
-#only need one of the es nodes of es cluster
 es.hosts=${es.host}
 es.cluster.port=9300
-
-##### Spark JDBC相关配置 #####
 hive.jdbc.driver=org.apache.hive.jdbc.HiveDriver
 hive.jdbc.url=jdbc:hive2://${zookeeper.host}/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=thriftserver
+call.external.service=true
