--- a/Service/Face/pom.xml
+++ b/Service/Face/pom.xml
@@ -38,6 +38,10 @@
             <artifactId>jni</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.hzgc.common</groupId>
+            <artifactId>common-attribute</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
