--- a/Cluster/pom.xml
+++ b/Cluster/pom.xml
@@ -59,11 +59,6 @@
                 <version>${spark.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.kafka</groupId>
-                <artifactId>kafka_2.11</artifactId>
-                <version>1.0.0</version>
-            </dependency>
-            <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>5.1.38</version>
@@ -87,11 +82,6 @@
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>2.8.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.hzgc</groupId>
-                <artifactId>elasticsearch</artifactId>
-                <version>1.0</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
@@ -121,7 +111,7 @@
             <dependency>
                 <groupId>org.apache.spark</groupId>
                 <artifactId>spark-streaming-kafka-0-8_2.11</artifactId>
-                <version>${spark_kafka.verson}</version>
+                <version>${spark.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.scala-lang</groupId>
