--- a/Service/Address/src/main/resources/application-dev.properties
+++ b/Service/Address/src/main/resources/application-dev.properties
@@ -1,25 +1,13 @@
-##### Spring Cloud Ïà¹ØÅäÖÃ #####
+##### Spring Cloud ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ #####
 eureka.client.serviceUrl.defaultZone=http://172.18.18.201:9000/eureka/
 server.port=7770
 spring.application.name=ftp
-#eureka.client.register-with-eureka=false
-#eureka.client.fetch-registry=false
-eureka.instance.status-page-url=http://192.168.1.57:${server.port}/swagger-ui.html
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.status-page-url=http://${spring.cloud.client.ipAddress}:${server.port}/swagger-ui.html
 eureka.instance.preferIpAddress=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 spring.cloud.config.enabled=false
 
-##### FTP ip¡¢hostname¡¢port Ïà¹ØÅäÖÃ #####
-ftp.proxy.ip=172.18.18.163
-ftp.proxy.hostname=s120
-ftp.proxy.port=2121
-ftp.username=admin
-ftp.password=123456
-ftp.pathRule=%f/%Y/%m/%d/%H
-ftp.hostname.mapping=s120:172.18.18.163;s103:172.18.18.103;s105:172.18.18.105
-
-##### Ftp Subscription Ïà¹ØÅäÖÃ #####
-zk.session.timeout=6000
-zk.address=172.18.18.163:2181
-zk.path.subscribe="/ftp_subscribe"
-zk.watcher=false
+##### Ftp Subscription ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ #####
+zk.address=172.18.18.100:2181
