--- a/Service/Address/src/main/resources/log4j.properties
+++ b/Service/Address/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO,dateLogger,errorLogger
+log4j.rootLogger=INFO,console,dateLogger,errorLogger
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target=System.out
