--- a/Cluster/Spark/src/main/resources/sparkJob.properties
+++ b/Cluster/Spark/src/main/resources/sparkJob.properties
@@ -31,7 +31,7 @@ es.cluster.port=9300
 
 ########## phoenix option ##########
 # phoenix jdbc url
-phoenix.jdbc.url=
+phoenix.jdbc.url=jdbc:phoenix:172.18.18.100:2181
 ####################################
 
 ########## recognizeAlarmJob option ##########
