修改错误脚本

--- a/Distribution/src/resources/project-conf.properties
+++ b/Distribution/src/resources/project-conf.properties
@@ -34,39 +34,30 @@ zookeeper_installnode=
 #KAFKA的安装节点:   e.x: 172.18.18.144;172.18.18.143;172.18.18.147
 kafka_install_node=
 
-#FTP的代理节点:  e.x: 172.18.18.144
-ftp_proxy_ip=
-ftp_proxy_hostname=
-ftp_proxy_port=
-
-#FTP的服务节点（HostName及IP）
-#【注意】这行主机名和IP之间用冒号间隔:   e.x: s115:172.18.18.143;s117:172.18.18.147
-ftp_service_ip=
-
-#FTP集群节点HostName及IP映射:  e.x: s120:172.18.18.163;s103:172.18.18.103;s105:172.18.18.105
-ftp_hostname_mapping=s120:172.18.18.163;s103:172.18.18.103;s105:172.18.18.105
-
-#FTP服务节点的主机名，用于配置service/conf/ftp-hostnames.properties；common/conf/ftp-hostnames.properties;分发ftp文件夹到各个节点
-#e.x:s115;s117
-ftp_service_node=
+#创建kafka topic时的副本数
+kafka_replicationFactor=3
+#创建kafka topic时的分区数
+kafka_partitions=6
 
 #ROCKETMQ的Nameserver节点:    e.x: 172.18.18.147
 rocketmq_nameserver=
 
-#DUBBO的服务节点所在IP:e.x:172.18.18.144;172.18.18.143
-dubbo_servicenode=删除
-
-#spring cloud服务节点:
-spring_cloud_service_node=
-
-#spring cloud eureka client: e.x: http://172.18.18.144:8761/eureka/
-eureka_client_serviceUrl_defaultZone=
-
-#ES的服务节点所在IP:   e.x: 172.18.18.144
+#ES的服务节点所在IP： e.x:172.18.18.144
 #only need one of the es nodes of es cluster
 es_service_node=
 
-#JDBC的主机名:e.x:s115;s116;s117
+##ES索引模糊查询最小、最大字符数
+Min_Gram=2
+Max_Gram=20
+
+##ES索引分片、副本数，分片数和ES节点个数相同
+Number_Of_Shards=5
+Number_Of_Replicas=1
+
+##ES索引最大分页搜素文档数
+Max_Result_Window=1000000000
+
+#spark thriftserver的主机名:e.x:s115;s116;s117
 jdbc_service_node=
 
 #需要分发common目录的节点主机名：e.x:s115;s116;s117
@@ -78,23 +69,12 @@ Cluster_HostName=
 #需要搭建的服务：e.x: device;face;starepo
 spring_cloud_service_classes=
 
-#创建kafka topic时的副本数
-kafka_replicationFactor=3
-#创建kafka topic时的分区数
-kafka_partitions=6
+
 ## 大数据相关的组件安装根目录
 Install_HomeDir=/opt/hzgc/bigdata
 ## Ftp的数据存放目录:
 ftp_data_dir=/opt/ftpdata
 
-##ES索引模糊查询最小、最大字符数
-Min_Gram=2
-Max_Gram=20
-##ES索引分片、副本数
-Number_Of_Shards=5
-Number_Of_Replicas=1
-##ES索引最大分页搜素文档数
-Max_Result_Window=1000000000
 
 ##处理队列线程池的线程数
 Thread_number=4
@@ -123,9 +103,3 @@ es_cluster_port=9300
 ##### Spark JDBC相关配置 #####
 hive_jdbc_driver=
 hive_jdbc_url=
-
-##### Ftp Subscription 相关配置 #####
-zk_session_timeout=6000
-zk_address=172.18.18.163:2181
-zk_path_subscribe="/ftp_subscribe"
-zk_watcher=false
