--- a/Service/DynRepo/src/main/resources/application-dev.properties
+++ b/Service/DynRepo/src/main/resources/application-dev.properties
@@ -6,12 +6,13 @@ eureka.instance.status-page-url=http://${spring.cloud.client.ipAddress}:${server
 eureka.instance.preferIpAddress=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 spring.cloud.config.enabled=false
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 es.cluster.name=hbase2es-cluster
 es.hosts=172.18.18.100
 es.cluster.port=9300
-hive.jdbc.driver=
-hive.jdbc.url=
-call.external.service=false
+hive.jdbc.driver=org.apache.hive.jdbc.HiveDriver
+hive.jdbc.url=jdbc:hive2://s100:2181,s101:2181,s102:2181/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=thriftserver
+call.external.service=true
+zk.address=172.18.18.100:2181
