--- a/Service/DynRepo/src/main/resources/application-pro.properties
+++ b/Service/DynRepo/src/main/resources/application-pro.properties
@@ -12,3 +12,4 @@ es.cluster.port=9300
 hive.jdbc.driver=org.apache.hive.jdbc.HiveDriver
 hive.jdbc.url=jdbc:hive2://${zookeeper.host}/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=thriftserver
 call.external.service=true
+zk.address=${zk.address}
