修改剩余脚本

--- a/Cluster/Spark/src/main/resources/sparkJob.properties
+++ b/Cluster/Spark/src/main/resources/sparkJob.properties
@@ -111,4 +111,7 @@ job.clustering.capture.database.user=root
 job.clustering.capture.database.password=Hzgc@123
 #######################################
 
-
+job.smallfile.merge.hdfs.name=hdfs://hzgc
+job.smallfile.merge.mid_table.hdfs_path=/user/hive/warehouse/mid_table
+job.smallfile.merge.person_table.hdfs_path=/user/hive/warehouse/person_table
+job.smallfile.merge.person_table.name=person_table
