--- a/Service/DynRepo/src/main/resources/application-pro.properties
+++ b/Service/DynRepo/src/main/resources/application-pro.properties
@@ -4,6 +4,8 @@ spring.application.name=dynRepo
 eureka.instance.status-page-url=http://${spring.cloud.client.ipAddress}:${server.port}/swagger-ui.html
 eureka.instance.preferIpAddress=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 spring.cloud.config.enabled=false
 
 es.cluster.name=hbase2es-cluster
@@ -12,4 +14,4 @@ es.cluster.port=9300
 hive.jdbc.driver=org.apache.hive.jdbc.HiveDriver
 hive.jdbc.url=jdbc:hive2://${zookeeper.host}/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=thriftserver
 call.external.service=true
-zk.address=${zk.address}
+zk.address=${zookeeper.host}
