--- a/Service/Face/src/main/resources/application-pro.properties
+++ b/Service/Face/src/main/resources/application-pro.properties
@@ -1,6 +1,6 @@
-##### Spring Cloud 生产环境相关配置 #####
+##### Spring Cloud 鐩稿叧閰嶇疆 #####
 eureka.client.serviceUrl.defaultZone=http://${eureka.ip}:${eureka.port}/eureka/
-server.port=7776
+server.port=7775
 spring.application.name=face
 eureka.instance.status-page-url=http://${server.ip}:${server.port}/swagger-ui.html
 eureka.instance.preferIpAddress=true
