--- a/Service/Face/src/main/resources/application-dev.properties
+++ b/Service/Face/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 eureka.client.serviceUrl.defaultZone=http://172.18.18.201:9000/eureka/
 server.port=7775
 spring.application.name=face
-eureka.instance.status-page-url=http://localhost:${server.port}/swagger-ui.html
+eureka.instance.status-page-url=http://172.18.18.146:${server.port}/swagger-ui.html
 eureka.instance.preferIpAddress=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 spring.cloud.config.enabled=false
