将service模块下的各个组件根据需求分发

--- a/Distribution/src/resources/project-conf.properties
+++ b/Distribution/src/resources/project-conf.properties
@@ -31,6 +31,30 @@
 #ZOOKEEPER的安装节点:  e.x: 172.18.18.144;172.18.18.143;172.18.18.147
 zookeeper_installnode=
 
+#ADDRESS需要分发的节点：e.x:172.18.18.144;172.18.18.143;172.18.18.147
+address_distribution=
+
+#ALARM需要分发的节点： e.x:172.18.18.144;172.18.18.143;172.18.18.147
+alarm_distribution=
+
+#CLUSTERING需要分发的节点： e.x:172.18.18.144;172.18.18.143;172.18.18.147
+clustering_distribution=
+
+#DISPATCH需要分发的节点： e.x:172.18.18.144;172.18.18.143;172.18.18.147
+dispatch_distribution=
+
+#DYNREPO需要分发的节点： e.x:172.18.18.144;172.18.18.143;172.18.18.147
+dynrepo_distribution=
+
+#FACE需要分发的节点： e.x:172.18.18.144;172.18.18.143;172.18.18.147
+face_distribution=
+
+#STAREPO需要分发的节点： e.x:172.18.18.144;172.18.18.143;172.18.18.147
+starepo_distribution=
+
+#VISUAL需要分发的节点： e.x:172.18.18.144;172.18.18.143;172.18.18.147
+visual_distribution=
+
 #KAFKA的安装节点:   e.x: 172.18.18.144;172.18.18.143;172.18.18.147
 kafka_install_node=
 
