--- a/Service/Visual/src/main/resources/application-pro.properties
+++ b/Service/Visual/src/main/resources/application-pro.properties
@@ -1,3 +1,4 @@
+##### Spring Cloud 相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://${eureka.ip}:${eureka.port}/eureka/
 server.port=7778
 spring.application.name=visual
@@ -8,6 +9,7 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.cloud.config.enabled=false
 
+##### ES 相关配置 #####
 es.cluster.name=hbase2es-cluster
 es.hosts=${es.host}
 es.cluster.port=9300
