--- a/Service/Visual/src/main/resources/application-dev.properties
+++ b/Service/Visual/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-##### Spring Cloud 相关配置 #####
+##### Spring Cloud 鐩稿叧閰嶇疆 #####
 eureka.client.serviceUrl.defaultZone=http://172.18.18.201:9000/eureka/
 server.port=7778
 spring.application.name=visual
@@ -9,7 +9,7 @@ eureka.instance.preferIpAddress=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 spring.cloud.config.enabled=false
 
-##### ES集群相关配置 #####
+##### ES 鐩稿叧閰嶇疆 #####
 es.cluster.name=hbase2es-cluster
 #only need one of the es nodes of es cluster
 es.hosts=172.18.18.103
