--- a/Service/Dispatch/src/main/resources/application-dev.properties
+++ b/Service/Dispatch/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-#####  SpringCloud Ïà¹ØÅäÖÃ#####
+#####  SpringCloud ç›¸å…³é…ç½®#####
 eureka.client.serviceUrl.defaultZone=http://172.18.18.201:9000/eureka/
 server.port=7773
 spring.application.name=bigdevice
