--- a/Service/Dispatch/src/main/resources/application-pro.properties
+++ b/Service/Dispatch/src/main/resources/application-pro.properties
@@ -1,4 +1,4 @@
-##### SpringCloud Ïà¹ØÅäÖÃ#####
+##### SpringCloud ç›¸å…³é…ç½®#####
 eureka.client.serviceUrl.defaultZone=http://${eureka.ip}:${eureka.port}/eureka/
 server.port=7773
 spring.application.name=dispatch
