--- a/Distribution/src/resources/project-conf.properties
+++ b/Distribution/src/resources/project-conf.properties
@@ -57,7 +57,7 @@ number_of_replicas=1
 ##ES索引最大分页搜素文档数
 max_result_window=1000000000
 
-#spark thriftserver的主机名:e.x:s115;s116;s117
+#spark thriftserver的主机名:e.x:172.18.18.100;172.18.18.101;172.18.18.102
 jdbc_service_node=
 
 ## 大数据相关的组件安装根目录
@@ -72,28 +72,28 @@ spring_cloud_eureka_node=
 #spring cloud eureka port e: e.x:9000
 spring_cloud_eureka_port=
 
-#ADDRESS需要分发的节点（已经存在模块的节点不需要再次写入）：e.x: 172.18.18.143;172.18.18.147
+#ADDRESS需要分发的节点（如果服务启动在当前所在节点则不需要配置）：e.x: 172.18.18.143;172.18.18.147
 address_distribution=
 
-#ALARM需要分发的节点（已经存在模块的节点不需要再次写入）：e.x: 172.18.18.143;172.18.18.147
+#ALARM需要分发的节点（如果服务启动在当前所在节点则不需要配置）：e.x: 172.18.18.143;172.18.18.147
 alarm_distribution=
 
-#CLUSTERING需要分发的节点（已经存在模块的节点不需要再次写入）：e.x: 172.18.18.143;172.18.18.147
+#CLUSTERING需要分发的节点（如果服务启动在当前所在节点则不需要配置）：e.x: 172.18.18.143;172.18.18.147
 clustering_distribution=
 
-#DISPATCH需要分发的节点（已经存在模块的节点不需要再次写入）：e.x: 172.18.18.143;172.18.18.147
+#DISPATCH需要分发的节点（如果服务启动在当前所在节点则不需要配置）：e.x: 172.18.18.143;172.18.18.147
 dispatch_distribution=
 
-#DYNREPO需要分发的节点（已经存在模块的节点不需要再次写入）：e.x: 172.18.18.143;172.18.18.147
+#DYNREPO需要分发的节点（如果服务启动在当前所在节点则不需要配置）：e.x: 172.18.18.143;172.18.18.147
 dynrepo_distribution=
 
-#FACE需要分发的节点（已经存在模块的节点不需要再次写入）：e.x: 172.18.18.143;172.18.18.147
+#FACE需要分发的节点（如果服务启动在当前所在节点则不需要配置）：e.x: 172.18.18.143;172.18.18.147
 face_distribution=
 
-#STAREPO需要分发的节点（已经存在模块的节点不需要再次写入）：e.x: 172.18.18.143;172.18.18.147
+#STAREPO需要分发的节点（如果服务启动在当前所在节点则不需要配置）：e.x: 172.18.18.143;172.18.18.147
 starepo_distribution=
 
-#VISUAL需要分发的节点（已经存在模块的节点不需要再次写入）：e.x: 172.18.18.143;172.18.18.147
+#VISUAL需要分发的节点（如果服务启动在当前所在节点则不需要配置）：e.x: 172.18.18.143;172.18.18.147
 visual_distribution=
 
 #---------------------------------------------------------------------#
