建议迁入人员统计

--- a/Service/Clustering/src/main/resources/application-dev.properties
+++ b/Service/Clustering/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ server.port=7772
 spring.application.name=clustering
 #eureka.client.register-with-eureka=false
 #eureka.client.fetch-registry=false
-eureka.instance.status-page-url=http://172.18.18.100:${server.port}/swagger-ui.html
+eureka.instance.status-page-url=http://${spring.cloud.client.ipAddress}:${server.port}/swagger-ui.html
 eureka.instance.preferIpAddress=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 spring.cloud.config.enabled=false
