--- a/Service/Visual/pom.xml
+++ b/Service/Visual/pom.xml
@@ -29,6 +29,16 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>com.hzgc.service</groupId>
+            <artifactId>starepo</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hzgc.service</groupId>
+            <artifactId>clustering</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
