--- a/Service/Clustering/src/main/resources/application-pro.properties
+++ b/Service/Clustering/src/main/resources/application-pro.properties
@@ -1,5 +1,9 @@
 eureka.client.serviceUrl.defaultZone=http://${eureka.ip}:${eureka.port}/eureka/
 server.port=7772
+info.version=@project.version@
+endpoints.health.sensitive=false
+endpoints.health.enabled=true
+management.security.enabled=false
 spring.application.name=clustering
 eureka.instance.status-page-url=http://${spring.cloud.client.ipAddress}:${server.port}/swagger-ui.html
 eureka.instance.preferIpAddress=true
