--- a/Cluster/Spark/src/main/resources/sparkJob.properties
+++ b/Cluster/Spark/src/main/resources/sparkJob.properties
@@ -27,6 +27,7 @@ ftp.password=123456
 es.cluster.name=hbase2es-cluster
 es.hosts=172.18.18.103
 es.cluster.port=9300
+es.web.port=9200
 ################################
 
 ########## phoenix option ##########
