因平台mysql数据库升级，聚类中的表名发生更改所做出的调整

--- a/Cluster/Spark/src/main/resources/sparkJob.properties
+++ b/Cluster/Spark/src/main/resources/sparkJob.properties
@@ -81,7 +81,8 @@ job.clustering.cluster.number=
 # iterator number
 job.clustering.iterator.number=
 # mysql url
-job.clustering.mysql.url=jdbc:mysql://172.18.18.42:3306/isap?user=root&password=root
+job.clustering.mysql.alarm.url=jdbc:mysql://172.18.18.152:3306/alarm?user=root&password=gosun@123
+job.clustering.mysql.device.url=jdbc:mysql://172.18.18.152:3306/device?user=root&password=gosun@123
 # mysql table
 job.clustering.mysql.alarm.record.table=t_alarm_record
 # mysql table
