--- a/Service/Face/pom.xml
+++ b/Service/Face/pom.xml
@@ -25,6 +25,10 @@
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
+            <artifactId>common-jni</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.hzgc.common</groupId>
             <artifactId>common-util</artifactId>
             <exclusions>
                 <exclusion>
@@ -34,13 +38,8 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.hzgc</groupId>
-            <artifactId>jni</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
             <groupId>com.hzgc.common</groupId>
-            <artifactId>common-attribute</artifactId>
+            <artifactId>common-faceattribute</artifactId>
         </dependency>
     </dependencies>
 
