--- a/Service/Clustering/pom.xml
+++ b/Service/Clustering/pom.xml
@@ -21,7 +21,11 @@
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
-            <artifactId>common-clustering</artifactId>
+            <artifactId>common-facedynrepo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.hzgc.common</groupId>
+            <artifactId>common-faceclustering</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -62,11 +66,6 @@
                     <groupId>org.codehaus.jackson</groupId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.hzgc.common</groupId>
-            <artifactId>common-table</artifactId>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
@@ -114,12 +113,10 @@
             <version>5.5.0</version>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-security</artifactId>
