--- a/Service/DynRepo/pom.xml
+++ b/Service/DynRepo/pom.xml
@@ -15,13 +15,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.hzgc</groupId>
-            <artifactId>jni</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
             <groupId>com.hzgc.common</groupId>
-            <artifactId>common-attribute</artifactId>
+            <artifactId>common-faceattribute</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -63,7 +58,7 @@
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
-            <artifactId>common-table</artifactId>
+            <artifactId>common-facedynrepo</artifactId>
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
