--- a/Service/StaRepo/pom.xml
+++ b/Service/StaRepo/pom.xml
@@ -15,12 +15,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.hzgc</groupId>
-            <artifactId>jni</artifactId>
-            <version>1.0</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
             <optional>true</optional>
@@ -43,8 +37,11 @@
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
-            <artifactId>common-table</artifactId>
-            <optional>true</optional>
+            <artifactId>common-jni</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.hzgc.common</groupId>
+            <artifactId>common-facestarepo</artifactId>
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
