--- a/Service/Address/pom.xml
+++ b/Service/Address/pom.xml
@@ -34,9 +34,9 @@
             <artifactId>util</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.hzgc.collect</groupId>
-            <artifactId>collect-zookeeper</artifactId>
-            <version>1.0</version>
+            <groupId>com.hzgc.common</groupId>
+            <artifactId>common-collect</artifactId>
+            <version>${bigdata-common.version}</version>
         </dependency>
     </dependencies>
 
