--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -88,7 +88,7 @@
             <dependency>
                 <groupId>com.hzgc.common</groupId>
                 <artifactId>common-jni</artifactId>
-                <version>${project.parent.version}</version>
+                <version>1.0</version>
             </dependency>
             <dependency>
                 <groupId>com.hzgc.common</groupId>
