合并告警并添加至es中

--- a/Cluster/Spark/pom.xml
+++ b/Cluster/Spark/pom.xml
@@ -119,6 +119,11 @@
             <artifactId>elasticsearch</artifactId>
             <version>${es.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.hzgc.common</groupId>
+            <artifactId>common-facealarm</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
     <repositories>
