--- a/Cluster/Spark/src/main/resources/sparkJob.properties
+++ b/Cluster/Spark/src/main/resources/sparkJob.properties
@@ -54,6 +54,15 @@ job.addAlarm.appName=FaceAddAlarmJob
 kafka.FaceAddAlarmJob.group.id=FaceAddAlarmJobGroupID
 ########################################
 
+########## AlarmJob option ##########
+# time interval
+job.Alarm.timeInterval=5
+# app name
+job.alarm.appName=FaceAlarmJob
+# group id
+kafka.FaceAlarmJob.group.id=FaceAlarmJobGroup
+########################################
+
 ########## offline alarm ##########
 # app name
 job.offLine.appName=FaceOffLineAlarmJo
