--- a/Cluster/Spark/src/main/resources/sparkJob.properties
+++ b/Cluster/Spark/src/main/resources/sparkJob.properties
@@ -65,7 +65,12 @@ kafka.FaceAlarmJob.group.id=FaceAlarmJobGroup
 
 ########## offline alarm ##########
 # app name
-job.offLine.appName=FaceOffLineAlarmJo
+job.offLine.appName=FaceOffLineAlarmJob
+job.offLine.jdbcUrl=jdbc:phoenix:172.18.18.100:2181
+job.offLine.esNodes=172.18.18.100
+job.offLine.esPort=9200
+#允许离线告警时长，单位为毫秒(ms)
+job.offLine.timeInterval=86400000
 ###################################
 
 ########## faceObjectConsumer option ##########
